--- a/la-mia-pizzeria-static/Views/Home/Index.cshtml
+++ b/la-mia-pizzeria-static/Views/Home/Index.cshtml
@@ -3,65 +3,83 @@
     ViewData["Title"] = "Home Page";
 }
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
 
-<div class="text-center">
-    <h1 class="display-4">La mia Pizzeria</h1>
-</div>
-<table>
-    <thead>
-        <tr>
-            <th>Nome</th>
-            <th>Descrizione</th>
-            <th>Foto</th>
-            <th>Prezzo</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>Margherita</td>
-            <td>Pomodoro, mozzarella, basilico</td>
-            <td><img src="https://www.finedininglovers.it/sites/g/files/xknfdk1106/files/styles/recipes_1200_800_fallback/public/fdl_content_import_it/margherita-50kalo.jpg?itok=v9nHxNMS" alt="Margherita"></td>
-            <td>€ 5,00</td>
-        </tr>
-        <tr>
-            <td>Diavola</td>
-            <td>Pomodoro, mozzarella, salame piccante</td>
-            <td><img src="https://wips.plug.it/cips/buonissimo.org/cms/2012/05/69630013_m.jpg" alt="Diavola"></td>
-            <td>€ 6,00</td>
-        </tr>
-        <tr>
-            <td>Quattro formaggi</td>
-            <td>Pomodoro, mozzarella, gorgonzola, fontina, parmigiano</td>
-            <td><img src="https://cdn.ilclubdellericette.it/wp-content/uploads/2020/04/pizza-ai-quattro-formaggi-fatta-in-casa-1280x720.jpg" alt="Quattro formaggi"></td>
-            <td>€ 7,00</td>
-        </tr>
-        <tr>
-            <td>Capricciosa</td>
-            <td>Pomodoro, mozzarella, prosciutto cotto, funghi, olive, carciofi</td>
-            <td><img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Pizza_capricciosa.jpg" alt="Capricciosa"></td>
-            <td>€ 8,00</td>
-        </tr>
-    </tbody>
-</table>
+    <div class="text-center">
+        <h1 class="display-4">Le mie pizze</h1>
+    </div>
+    <table>
+        <thead>
+            <tr>
+                <th>Nome</th>
+                <th>Descrizione</th>
+                <th>Foto</th>
+                <th>Prezzo</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Margherita</td>
+                <td>Pomodoro, mozzarella, basilico</td>
+                <td><img src="https://www.finedininglovers.it/sites/g/files/xknfdk1106/files/styles/recipes_1200_800_fallback/public/fdl_content_import_it/margherita-50kalo.jpg?itok=v9nHxNMS" alt="Margherita"></td>
+                <td>€ 5,00</td>
+            </tr>
+            <tr>
+                <td>Diavola</td>
+                <td>Pomodoro, mozzarella, salame piccante</td>
+                <td><img src="https://wips.plug.it/cips/buonissimo.org/cms/2012/05/69630013_m.jpg" alt="Diavola"></td>
+                <td>€ 6,00</td>
+            </tr>
+            <tr>
+                <td>Quattro formaggi</td>
+                <td>Pomodoro, mozzarella, gorgonzola, fontina, parmigiano</td>
+                <td><img src="https://cdn.ilclubdellericette.it/wp-content/uploads/2020/04/pizza-ai-quattro-formaggi-fatta-in-casa-1280x720.jpg" alt="Quattro formaggi"></td>
+                <td>€ 7,00</td>
+            </tr>
+            <tr>
+                <td>Capricciosa</td>
+                <td>Pomodoro, mozzarella, prosciutto cotto, funghi, olive, carciofi</td>
+                <td><img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Pizza_capricciosa.jpg" alt="Capricciosa"></td>
+                <td>€ 8,00</td>
+            </tr>
+            <tr>
+                <td>Coccode</td>
+                <td>Pomodoro, uovo, bacon, mais</td>
+                <td><img src="https://static.vecteezy.com/ti/foto-gratuito/p2/2188237-pizza-brasiliana-con-mozzarella-mais-pancetta-uova-pomodoro-e-origano-foto.jpg" alt="Coccode"></td>
+                <td>€ 10,00</td>
+            </tr>
 
-<style>
-    table {
-        border-collapse: collapse;
-        width: 100%;
-    }
+        </tbody>
+    </table>
 
-    th, td {
-        padding: 8px;
-        text-align: left;
-        border-bottom: 1px solid #ddd;
-    }
+    <style>
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
 
-    th {
-        background-color: #f2f2f2;
-    }
+        th, td {
+            padding: 8px;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
+        }
 
-    img {
-        max-width: 100px;
-        height: auto;
-    }
-</style>
+        th {
+            background-color: #f2f2f2;
+        }
+
+        img {
+            max-width: 100px;
+            height: auto;
+        }
+    </style>
+</body>
+</html>
